# release-tutorial

./: .gitignore  README.md  pyproject.toml
.github/workflows/: copy.txt  release.yml
